best-practices-cel/require-probes/.chainsaw-test/bad-pod-nothing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox:1.35
