best-practices-cel/require-probes/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-probes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-probes.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-pod-probes
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-pods.yaml
    - apply:
        file: good-podcontrollers.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-nothing.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-notall.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-podcontrollers.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-update.yaml
